--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
