Add .md and .pptx support

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.6
 watchdog==6.0.0
 pypdf==6.4.2
 python-docx==1.2.0
+python-pptx==0.6.21
 openpyxl==3.1.2
 python-magic==0.4.27
 aiofiles==23.2.1
